k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: family-videos
  labels:
    app: family-videos
spec:
  type: ClusterIP
  selector:
    app: family-videos
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
